--- a/insta-connect-ui/insta-connect-app/package.json
+++ b/insta-connect-ui/insta-connect-app/package.json
@@ -23,11 +23,13 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.4",
     "crypto-js": "^3.1.9-1",
     "hammerjs": "^2.0.8",
     "material-design-icons": "^3.0.1",
     "rxjs": "^6.0.0",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
